# OmniLog

./: .env.example  .gitattributes  .gitignore  .npmrc  CLAUDE.md  DEVLOG.md  LOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  platform.ts  shell.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/scripts/: generate-icons.mjs  prepare-server.mjs
apps/desktop/src-tauri/src/: http_proxy.rs  lib.rs  local_server.rs  main.rs
apps/desktop/src/assets/icons/: README.md  index.tsx
apps/desktop/src/components/: EditorPane.tsx  FolderPicker.tsx  HistoryModal.tsx  MainLayout.tsx  MessagesPanel.tsx  MetaPane.tsx  ServerSwitcher.tsx  SettingsPage.tsx  SetupPage.tsx  ShareModal.tsx  Sidebar.tsx  SignedOutLanding.tsx
apps/desktop/src/components/editor/: ImageNode.ts  InlineMathPopover.tsx  LatexEditor.tsx  MarkdownEditor.tsx  MathDialog.tsx  ModeSwitcher.tsx  RichEditor.tsx  SourceEditor.tsx  Toolbar.tsx  imageInsert.ts  richExtensions.ts  sourceConvert.ts  sourceRender.ts
apps/desktop/src/components/editor/extensions/: AutoPair.ts
apps/desktop/src/components/settings/: AccountTab.tsx  AddConnectionDialog.tsx  AdvancedTab.tsx  BillingTab.tsx  ConnectionsTab.tsx  ProfileTab.tsx  ServerTab.tsx  UsersTab.tsx
apps/desktop/src/lib/: api.ts  config.ts  drafts.ts  localServer.ts  store.ts  theme.ts
apps/desktop/src/store/: appStore.ts
apps/desktop/src/ui/: UpgradeWatcher.tsx  dialog.tsx
apps/mobile/: index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/src/: App.tsx  platform.ts  shell.ts  styles.css
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: http_proxy.rs  lib.rs  main.rs
apps/mobile/src/components/: EntryList.tsx  EntryView.tsx  LoginPage.tsx  SettingsPage.tsx  icons.tsx  ui.tsx
apps/mobile/src/lib/: api.ts  config.ts  drafts.ts  store.ts  theme.ts
apps/mobile/src/store/: appStore.ts
apps/server/: Cargo.toml
apps/server/src/: auth.rs  config.rs  email.rs  error.rs  limits.rs  main.rs  rate_limit.rs  state.rs
apps/server/src/billing/: mod.rs  stripe.rs
apps/server/src/models/: asset.rs  entry.rs  folder.rs  license.rs  message.rs  mod.rs  share.rs  user.rs  version.rs
apps/server/src/routes/: access.rs  admin.rs  assets.rs  auth.rs  billing.rs  entries.rs  export.rs  folders.rs  health.rs  messages.rs  mod.rs  search.rs  settings.rs  shares.rs  users.rs  versions.rs
apps/server/src/storage/: json.rs  mod.rs  mongo.rs
deploy/: omnilog-docs.ejs  omnilog-index.ejs  omnilog-pages.js  omnilog-pricing.ejs
deploy/official/: .env.production  Dockerfile  docker-compose.yml
docs/: ENGINEERING_LOG.md
