[package]
name = "omnilog-desktop"
version = "0.1.0"
description = "OmniLog desktop client"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnilog_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP transport handled in Rust (not the webview) so it is immune to CORS,
# Chromium private-network blocking, and plugin URL-scope quirks.
reqwest = { version = "0.12", features = ["multipart"] }
base64 = "0.22"
