[package]
name = "omnilog-mobile"
version = "0.1.0"
description = "OmniLog mobile client"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnilog_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls (pure Rust) instead of the default native-tls/OpenSSL, which can't
# cross-compile for Android.
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "http2"] }
base64 = "0.22"
